--- a/shop_list.html
+++ b/shop_list.html
@@ -1,4 +1,4 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -155,6 +155,7 @@
 
     </style>
 </head>
+   <body>
    <div class="top-nav">
         <div class="nav-container">
             <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
