--- a/shop_list.html
+++ b/shop_list.html
@@ -166,7 +166,9 @@
             </nav>
         </div>
     </div>
+       <header>
         <h1>Your Shopping List</h1>
+       </header>
         <div id="shopping-list"></div>
     </div>
        <!-- Footer Section -->
