--- a/shop_list.html
+++ b/shop_list.html
@@ -132,10 +132,11 @@
         }
 
         .logo {
-            height: 80px;  /* Reduced size of the logo */
-            margin-right: 20px;  /* Space between logo and navigation links */
-            margin-left: 0;  /* Align logo to the left */
-        }
+    height: 80px; /* Set an appropriate height */
+    width: auto; /* Maintain aspect ratio */
+    margin-right: 20px;
+    margin-left: 0;
+}
 
         nav a {
             color: #6a9a3c;  /* Earthy green */
