--- a/about1.html
+++ b/about1.html
@@ -159,8 +159,10 @@
 
     <div class="top-nav">
         <div class="nav-container">
-            <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
-            <nav>
+            <a href="index.html">
+                <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            </a>
+                        <nav>
                 <a href="gen-meals.html">PLANNING</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
                 <a href="about.html">ABOUT</a>
