--- a/about1.html
+++ b/about1.html
@@ -116,7 +116,7 @@
 }
 
 .feature:nth-child(2) {
-    background-color: #d1f7e7; /* Light Mint Green */
+    background-color: #eef7d1; /* Light Mint Green */
 }
 
 .feature:nth-child(3) {
