--- a/shop_list.html
+++ b/shop_list.html
@@ -20,19 +20,11 @@
             color: #333;
             line-height: 1.6;
         }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
+ .container {
             width: 80%;
             max-width: 1200px;
-            margin: 40px auto;
+            margin: 0 auto;
             padding: 20px;
-            background: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
         h1 {
             font-size: 2.5rem;
