--- a/about1.html
+++ b/about1.html
@@ -112,15 +112,15 @@
 
 /* Enhanced Background Colors */
 .feature:nth-child(1) {
-    background-color: #ffedcc; /* Light Yellow */
+    background-color: #75a8465e; /* Light Yellow */
 }
 
 .feature:nth-child(2) {
-    background-color: #eef7d1; /* Light Mint Green */
+    background-color: #75a8465e; /* Light Mint Green */
 }
 
 .feature:nth-child(3) {
-    background-color: #fff5d9; /* Light Peach */
+    background-color: #75a8465e; /* Light Peach */
 }
 
 .feature:hover {
