--- a/shop_list.html
+++ b/shop_list.html
@@ -88,6 +88,11 @@
             padding-left: 20px;
             color: #666;
         }
+        header {
+            background-color: #fff;
+            text-align: center;
+            padding: 30px 0;
+        }
          /* Footer */
         footer {
             background-color: #333;
