--- a/about1.html
+++ b/about1.html
@@ -276,9 +276,9 @@
             <p>Quick, healthy, and customizable meal ideas based on what you already have in your kitchen.</p>
         </div>
         <div class="feature">
-            <div class="feature-icon">💡</div>
-            <h3>Smart Suggestions</h3>
-            <p>Personalized meal plans that optimize your ingredients, reducing waste and saving money.</p>
+            <div class="feature-icon">❤️</div>
+            <h3>Save You Favorites</h3>
+            <p>Keep track of the recipes that catch your eye. Save your favorite dishes and easily revisit them whenever you're ready to cook!</p>
         </div>
         <div class="feature">
             <div class="feature-icon">🛒</div>
