--- a/shop_list.html
+++ b/shop_list.html
@@ -37,7 +37,9 @@
             margin-top: 20px;
         }
         .meal {
-            padding: 20px;
+            width: 60%; 
+            margin: 0 auto 20px auto;
+            padding: 15px;
             margin-bottom: 20px;
             padding: 15px;
             border: 1px solid #ccc;
@@ -63,7 +65,7 @@
         }
         .meal button {
             display: inline-block;
-            background-color: #e4d426;
+            background-color: #6a9a3c;
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -73,7 +75,7 @@
             transition: background-color 0.3s ease;
         }
         .meal button:hover {
-            background-color: darkgreen;
+            background-color: #e4d426;
         }
         .ingredients {
             display: none;
