--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference&family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
     <title>Design&Dine</title>
     <style>
         /* General Reset */
@@ -80,7 +79,7 @@
             text-align: center;
         }
 
-        /* Food Icons */
+        /* Food Emojis */
         .hero-icons {
             display: flex;
             justify-content: center;
@@ -89,8 +88,7 @@
         }
 
         .food-icon {
-            font-size: 3rem;  /* Size of each icon */
-            color: #6a9a3c;  /* Green color for icons */
+            font-size: 4rem;  /* Size of each emoji */
             transition: transform 0.3s ease;  /* Optional: add animation on hover */
         }
 
@@ -227,13 +225,13 @@
             <div class="hero-text">
                 <h2>Transform Your Ingredients into Delicious Meals</h2>
             </div>
-            <!-- Food icons replacing the logo -->
+            <!-- Food emoji icons -->
             <div class="hero-icons">
-                <i class="fas fa-apple-alt food-icon"></i>
-                <i class="fas fa-carrot food-icon"></i>
-                <i class="fas fa-utensils food-icon"></i>
-                <i class="fas fa-bread-slice food-icon"></i>
-                <i class="fas fa-drumstick-bite food-icon"></i>
+                <span class="food-icon">🍳</span>
+                <span class="food-icon">🍔</span>
+                <span class="food-icon">🥗</span>
+                <span class="food-icon">🍕</span>
+                <span class="food-icon">🍖</span>
             </div>
         </div>
     </header>
