--- a/about1.html
+++ b/about1.html
@@ -292,12 +292,15 @@
         <img src="meal-image.jpg" alt="Delicious Meal" class="visual-image">
     </div>
 
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Design&Dine. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
-        </div>
-    </footer>
+ <footer>
+    <div class="container">
+        <p>&copy; 2024 Design&Dine. All rights reserved. 
+            | <a href="mailto:support@designdine.com">Contact Us</a> 
+            | <a href="login.html">Login</a> 
+            | <a href="register.html">Register</a>
+        </p>
+    </div>
+</footer>
 
 </body>
 </html>
