--- a/index1.html
+++ b/index1.html
@@ -244,11 +244,12 @@
         </div>
     </div>
 
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Design&Dine. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
-        </div>
-    </footer>
-</body>
-</html>
+<footer>
+    <div class="container">
+        <p>&copy; 2024 Design&Dine. All rights reserved. 
+            | <a href="mailto:support@designdine.com">Contact Us</a> 
+            | <a href="login.html">Login</a> 
+            | <a href="register.html">Register</a>
+        </p>
+    </div>
+</footer>
