--- a/index1.html
+++ b/index1.html
@@ -206,7 +206,7 @@
         <div class="nav-container">
             <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             <nav>
-                <a href="gen-meals.html">PLANNING</a>
+                <a href="gen-meals.html">FIND RECIPES</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
                 <a href="about.html">ABOUT</a>
             </nav>
