--- a/about1.html
+++ b/about1.html
@@ -252,7 +252,7 @@
                 <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             </a>
             <nav>
-                <a href="gen-meals.html">PLANNING</a>
+                <a href="gen-meals.html">FIND RECIPES</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
                 <a href="about.html">ABOUT</a>
             </nav>
