--- a/index1.html
+++ b/index1.html
@@ -204,7 +204,9 @@
 <body>
     <div class="top-nav">
         <div class="nav-container">
-            <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            <a href="index.html">
+                <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            </a>
             <nav>
                 <a href="gen-meals.html">FIND RECIPES</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
@@ -244,15 +246,15 @@
         </div>
     </div>
 
-<footer>
-    <div class="container">
-        <!-- Login and Register links above the Contact Us line -->
-        <div style="margin-bottom: 10px; text-align: center;">
-            <a href="login.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
-            <a href="register.html" style="color:  rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
+    <footer>
+        <div class="container">
+            <!-- Login and Register links above the Contact Us line -->
+            <div style="margin-bottom: 10px; text-align: center;">
+                <a href="login.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
+                <a href="register.html" style="color:  rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
+            </div>
+            <p>&copy; 2024 Design&Dine. All rights reserved. 
+                | <a href="mailto:support@designdine.com">Contact Us</a> 
+            </p>
         </div>
-        <p>&copy; 2024 Design&Dine. All rights reserved. 
-            | <a href="mailto:support@designdine.com">Contact Us</a> 
-        </p>
-    </div>
-</footer>
+    </footer>
