--- a/login.html
+++ b/login.html
@@ -238,7 +238,9 @@
 <body>
     <div class="top-nav">
         <div class="nav-container">
-            <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            <a href="index.html">
+                <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            </a>
             <nav>
                 <a href="gen-meals.html">FIND RECIPES</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
