--- a/gen-meals.html
+++ b/gen-meals.html
@@ -206,10 +206,9 @@
     </div>
       <footer>
         <div class="container">
-            <!-- Login and Register links above the Contact Us line -->
+            <!-- Logout link above the Contact Us line -->
             <div style="margin-bottom: 10px; text-align: center;">
-                <a href="login.html" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Login</a>
-                <a href="register.html" style="color:  rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; text-decoration: none;">Register</a>
+                <a href="logout.php" style="color: rgb(220, 198, 30); font-size: 1.2rem; font-weight: bold; margin-right: 15px; text-decoration: none;">Logout</a>
             </div>
             <p>&copy; 2024 Design&Dine. All rights reserved. 
                 | <a href="mailto:support@designdine.com">Contact Us</a> 
