--- a/login.html
+++ b/login.html
@@ -242,10 +242,12 @@
                 <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             </a>
             <nav>
-                <a href="gen-meals.html">FIND RECIPES</a>
-                <a href="meal_plans.html">SAVED MEAL PLANS</a>
+                <a href="gen-meals.html">RECIPES</a>
+                <a href="saved.html">FAVORITES</a>
+                <a href="shop_list.html">CART</a>
                 <a href="about.html">ABOUT</a>
             </nav>
+
         </div>
     </div>
     <header>
