--- a/about1.html
+++ b/about1.html
@@ -109,6 +109,15 @@
     transition: transform 0.3s ease-in-out;
     max-width: 450px; /* Optional: Add maximum width for better spacing */
 }
+.features {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+    gap: 15px;  /* Reduced gap between the boxes */
+    text-align: center;
+    margin-bottom: 30px; /* Added margin to create space between features and footer */
+}
+
 
 /* Enhanced Background Colors */
 .feature:nth-child(1) {
